--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "groq>=1.0.0",
     "matplotlib>=3.10.8",
     "openai>=2.15.0",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "pillow>=12.1.0",
     "plotly>=6.5.1",
@@ -18,4 +19,5 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
+    "xlrd>=2.0.2",
 ]
